# tracksAI

./: .cursorrules  Dockerfile.dev  Dockerfile.simple  README.md  docker-compose.dev.yml  docker-compose.simple.yml  env.example  init.sql  pyproject.toml  pytest.ini  readme  requirements-dev.txt  requirements.txt  run_local.py  simple_server.py
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  dashboard.py  decisions.py  optimization.py  sections.py  stations.py  trains.py
core/: __init__.py  database.py  models.py  optimizer.py
templates/: dashboard.html
tests/: __init__.py  conftest.py  test_models.py  test_optimizer.py
